--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bevy = "0.9.1"
 rand = "0.8.5"
+reqwest = { version = "0.11.14", features = ["blocking"] }
 
 [workspace]
 resolver = "2" # Important! wgpu/Bevy needs this!
