--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2021"
 bevy = "0.9.1"
 rand = "0.8.5"
 reqwest = { version = "0.11.14", features = ["blocking"] }
+reqwest-wasm = { version = "0.11.16", features = ["blocking"] }
+serde = "1.0.152"
+serde_json = "1.0.93"
+ureq = { version = "2.6.2", features = ["json"] }
 
 [workspace]
 resolver = "2" # Important! wgpu/Bevy needs this!
