--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ reqwest-wasm = { version = "0.11.16", features = ["blocking"] }
 serde = "1.0.152"
 serde_json = "1.0.93"
 ureq = { version = "2.6.2", features = ["json"] }
+wasm-bindgen = "0.2"
+schnorrkel = { git = "https://github.com/w3f/schnorrkel.git", features = ["nightly"] }
 
 [workspace]
 resolver = "2" # Important! wgpu/Bevy needs this!
