--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,13 @@ edition = "2021"
 [dependencies]
 bevy = "0.9.1"
 rand = "0.8.5"
-reqwest = { version = "0.11.14", features = ["blocking"] }
-reqwest-wasm = { version = "0.11.16", features = ["blocking"] }
 serde = "1.0.152"
 serde_json = "1.0.93"
+wasm-bindgen = "0.2.106"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+reqwest = { version = "0.11.14", features = ["blocking"] }
 ureq = { version = "2.6.2", features = ["json"] }
-wasm-bindgen = "0.2"
 schnorrkel = { git = "https://github.com/w3f/schnorrkel.git", features = ["nightly"] }
 
 [workspace]
